Make the scriptloader check the HTTP status and not load 404 pages and such as scripts.  Bug 139040, r=jst, sr=rpotts